--- a/ui.html
+++ b/ui.html
@@ -1,9 +1,9 @@
 <div class="header">
   <h1>TO-DO APP LIST</h1>
   <div class="inputAndButton">
-    <span><input type="text">
-        <input type="button" value="ADD ITEM">
+    <span
+      ><input type="text" />
+      <input type="button" value="ADD ITEM" />
     </span>
-    
   </div>
 </div>
